After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707495 - Formatting of the DLNA PlaySpeed header is incorrect
Formatting of the DLNA PlaySpeed header is incorrect
Status: RESOLVED FIXED
Product: gupnp-av
Classification: Other
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-04 19:24 UTC by Craig Pratt
Modified: 2019-02-22 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed fix to gupnp-protocol-info.c add_dlna_info() (852 bytes, patch)
2013-09-04 19:24 UTC, Craig Pratt
committed Details | Review

Description Craig Pratt 2013-09-04 19:24:29 UTC
Created attachment 254122 [details] [review]
Proposed fix to gupnp-protocol-info.c add_dlna_info()

The DLNA PlaySpeed header (DLNA.ORG_PS) is not formatted correctly by the gupnp-av library when producing the ProtocolInfo string.

If, for example, the ProtocolInfo play_speeds array is set to {"-1/2","-2","1/2","2"}, the field is formatted as "DLNA.ORG_PS=;-1/2,-2,1/2,2" in the produced protocol info string. It should be formatted as "DLNA.ORG_PS=-1/2,-2,1/2,2;", per DLNA. 

I'll attach a proposed patch with the fix we're using.
Comment 1 Jens Georg 2013-09-30 12:01:57 UTC
Thanks!