Fix PlaySpeed header generation

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=707495